# wafielib

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: build-artifact.yml  build-docker.yml
dockerfiles/: Dockerfile  Dockerfile_go  Makefile  example.conf  kubeguardlib.h
dockerfiles/config/: modsecurity.conf
dockerfiles/include/kubeguard/: kubeguardlib.h
include/: kubeguardlib.h
src/: kubeguardlib.c  test.c  wafielib.c
